# natural-computing-tasks

./: .gitignore  pyproject.toml
natural_computing_tasks/first_task/: baseline_prediction.py  baseline_regression.py  baseline_regression_animation.py  prediction.py  regression.py  script.py  utils.py
natural_computing_tasks/first_task/analysis/: base.py  best_models.py  boxplots.py  concatenate.py  fitness_per_epoch.py  results.csv
natural_computing_tasks/first_task/analysis/best_histories/prediction/: ga_max.npy  ga_min.npy  pso_max.npy  (+1 more)
natural_computing_tasks/first_task/analysis/results/: results1.csv  results2.csv
natural_computing_tasks/first_task/scripts/: experiments_setup.py  prediction.py  regression.py  script.py
natural_computing_tasks/fuzzy_task/analysis/: boxplots.py
natural_computing_tasks/fuzzy_task/analysis/results/: fuzzy_task.csv
natural_computing_tasks/fuzzy_task/scripts/: fuzzy.py  script.py
natural_computing_tasks/second_task/analysis/: boxplots.py  confusion_matrix.py  experiments_setup.py  fitness_per_epoch.py  results.csv
natural_computing_tasks/second_task/analysis/best_histories/: ga_heart.npy  ga_hepatitis.npy  ga_iris.npy  pso_heart.npy  pso_hepatitis.npy  pso_iris.npy
natural_computing_tasks/second_task/analysis/best_models/: backpropagation_heart.pkl  backpropagation_hepatitis.pkl  backpropagation_iris.pkl  ga_heart.pkl  ga_hepatitis.pkl  ga_iris.pkl  pso_heart.pkl  pso_hepatitis.pkl  pso_iris.pkl
natural_computing_tasks/second_task/scripts/: experiments_setup.py  heart.py  hepatitis.py  iris.py  script.py  utils.py
(+11 files in other folders)
