[tool.poetry]
name = "natural-computing-tasks"
version = "0.1.0"
description = ""
authors = ["Gabriel Soares Baptista <gsoaresbaptista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
scikit-learn = "^1.3.1"
scikit-opt = "^0.6.6"
matplotlib = "^3.8.0"
pandas = "^2.1.2"
evolutionary-programming = "^0.7.3"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
